--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,21 @@
       name="description"
       content="Saboo Maruti authorized Maruti Suzuki dealer in Hyderabad & Secunderabad. Get best deals & offers on new Maruti Celerio, Maruti Swift, Maruti brezza,Maruti S-Presso, Maruti Wagon R, Maruti Ertiga, Maruti Alto 800, Maruti Eeco, Maruti Omni, Maruti Vitara brezza. "
     />
+    <!-- Event snippet for Submit lead form nov22 conversion page -->
+    <script>
+      gtag('event', 'conversion', {
+        send_to: 'AW-967312219/5HYDCIvNrIEYENuGoM0D',
+        value: 1.0,
+        currency: 'INR',
+      });
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="https://app.chat360.io/widget/chatbox/common_scripts/script.js"></script>
     <script>
-      loadChat360Bot("a61aca99-b493-49de-bb94-bfa267d54d84");
+      loadChat360Bot('a61aca99-b493-49de-bb94-bfa267d54d84');
     </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <!-- <script
@@ -53,22 +61,22 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
-      gtag("config", "G-EZRBHBQ3YW");
+      gtag('js', new Date());
+      gtag('config', 'G-EZRBHBQ3YW');
     </script>
 
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
         var f = d.getElementsByTagName(s)[0],
           j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
+          dl = l != 'dataLayer' ? '&l=' + l : '';
         j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-P8DSFZR");
+      })(window, document, 'script', 'dataLayer', 'GTM-P8DSFZR');
     </script>
     <!-- End Google Tag Manager -->
 
