--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       name="description"
       content="Saboo Maruti authorized Maruti Suzuki dealer in Hyderabad & Secunderabad. Get best deals & offers on new Maruti Celerio, Maruti Swift, Maruti brezza,Maruti S-Presso, Maruti Wagon R, Maruti Ertiga, Maruti Alto 800, Maruti Eeco, Maruti Omni, Maruti Vitara brezza. "
     />
+    <meta property="og:image" content="" />
     <!-- Event snippet for Submit lead form nov22 conversion page -->
     <script>
       gtag('event', 'conversion', {
