--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       property="og:image"
       content="https://images-saboomaruti-in.s3.ap-south-1.amazonaws.com/Arena/thumnails/arena-k10.webp"
     />
+    <meta name=“facebook-domain-verification”
+    content=“md4mdsmejpjm33sfbb9akud4erg4k0” />
     <!-- Event snippet for Submit lead form nov22 conversion page -->
     <script>
       gtag('event', 'conversion', {
