added cross compatible code for alto

--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,16 @@
     />
     <meta
       name="description"
-      content="Saboo Maruti authorized Maruti Suzuki dealer in Hyderabad & Secunderabad. Get best deals & offers on new Maruti Celerio, Maruti Swift, Maruti brezza,Maruti S-Presso, Maruti Wagon R, Maruti Ertiga, Maruti Alto 800, Maruti Eeco, Maruti Omni, Maruti Vitara brezza. "
+      content="Saboo Maruti Authorized Maruti Suzuki dealer in Hyderabad & Secunderabad. Get best deals & offers on new Maruti Celerio, Maruti Alto K10, Maruti Swift, Maruti Brezza, Maruti S-Presso, Maruti Wagon R, Maruti Ertiga, Maruti Alto 800, Maruti Eeco. "
     />
     <meta
       property="og:image"
       content="https://images-saboomaruti-in.s3.ap-south-1.amazonaws.com/Arena/thumnails/arena-k10.webp"
     />
-    <meta name=“facebook-domain-verification”
-    content=“md4mdsmejpjm33sfbb9akud4erg4k0” />
+    <meta
+      name="“facebook-domain-verification”"
+      content="“md4mdsmejpjm33sfbb9akud4erg4k0”"
+    />
     <!-- Event snippet for Submit lead form nov22 conversion page -->
     <script>
       gtag('event', 'conversion', {
